k8s/app-admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-admin
  labels:
    app: app-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-admin
  template:
    metadata:
      labels:
        app: app-admin
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: app-admin
        image: 249899228725.dkr.ecr.ap-northeast-1.amazonaws.com/${PREFIX}-app-admin:latest
        ports:
        - containerPort: 80
