k8s/app-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-admin
spec:
  type: ClusterIP
  selector:
    app: app-admin
  ports:
  - port: 80
    targetPort: 80
