k8s/app-admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-admin
spec:
  ingressClassName: traefik
  rules:
  - host: admin.sancode.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-admin
            port:
              number: 80
